--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
     "angularfire": "~0.5.0",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "exchangejs": "whytheplatypus/exchange.js#dev"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
