--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-route": "1.2.6",
     "angularfire": "~0.5.0",
     "underscore": "~1.5.2",
-    "exchangejs": "whytheplatypus/exchange.js#dev"
+    "exchangejs": "whytheplatypus/exchange.js#dev",
+    "polymer": "Polymer/polymer#~0.3.3",
+    "paper-elements": "Polymer/paper-elements#~0.3.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
