--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "angularfire": "~0.5.0",
     "underscore": "~1.5.2",
     "exchangejs": "whytheplatypus/exchange.js#dev",
+    "chess.js": "jhlywa/chess.js",
+    "chessboardjs": "oakmac/chessboardjs",
     "polymer": "Polymer/polymer#~0.3.3",
     "paper-elements": "Polymer/paper-elements#~0.3.3"
   },
